--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "dotenv": "^6.1.0"
   }
 }
