--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,9 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./app/index.js",
   "scripts": {
-    "start:dev": "nodemon --legacy-watch"
+    "start:dev": "nodemon ./app/index.js"
   },
   "keywords": [],
   "author": "",
