--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,33 @@
 version: "2"
 services:
 
-  admin:
-    image: admin
+  admin-frontend:
+      image: admin-frontend
+      build:
+        context: ./admin/client
+        dockerfile: DockerfileAdmin
+      container_name: admin-frontend
+      volumes:
+        - /tmp/admin-client/npm:/root/.npm:z
+        - ./admin/client:/usr/src/app/admin/client:z
+      ports:
+        - "5001:5001"
+      depends_on:
+        - admin-backend
+      restart: always
+
+
+  admin-backend:
+    image: admin-backend
     build:
       context: ./admin
       dockerfile: DockerfileAdmin
-    container_name: admin-container
+    container_name: admin-backend
     volumes:
       - /tmp/admin/npm:/root/.npm:z
       - ./admin/:/usr/src/app/:z
     ports:
       - "3001:80"
-    restart: always
-
-  client-backend:
-    image: client-backend
-    build:
-      context: ./client
-      dockerfile: DockerfileClient
-    container_name: client-backend
-    volumes:
-        - /tmp/client/npm:/root/.npm:z
-        - ./client/:/usr/src/app/:z
-    ports:
-      - "3000:80"
     restart: always
       
   client-frontend:
@@ -34,10 +37,23 @@ services:
         dockerfile: DockerfileClient
       container_name: client-frontend
       volumes:
-        - /tmp/admin-client/npm:/root/.npm:z
+        - /tmp/client-client/npm:/root/.npm:z
         - ./client/client:/usr/src/app/client/client:z
       ports:
         - "5000:5000"
       depends_on:
         - client-backend
+      restart: always
+
+  client-backend:
+      image: client-backend
+      build:
+        context: ./client
+        dockerfile: DockerfileClient
+      container_name: client-backend
+      volumes:
+          - /tmp/client/npm:/root/.npm:z
+          - ./client/:/usr/src/app/:z
+      ports:
+        - "3000:80"
       restart: always
